--- a/Udacity 1st Project/Frontpage.html
+++ b/Udacity 1st Project/Frontpage.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Inmesh Books</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://github.com/felixtomlinson/Udacity/blob/master/Udacity%201st%20Project/project.css">
   </head>
   <body>
     <h1 class="header">INMESH BOOKS</h1>
