--- a/Udacity 1st Project/Frontpage.html
+++ b/Udacity 1st Project/Frontpage.html
@@ -3,68 +3,70 @@
   <head>
     <meta charset="UTF-8">
     <title>Inmesh Books</title>
-    <link rel="stylesheet" href="Udacity/Udacity 1st Project/project.css">
+    <link rel="stylesheet" href="project.css">
   </head>
   <body>
-    <h1 class="header">INMESH BOOKS</h1>
-    <div class="option">
-      <a href="#">
-        <div class="option1">
-          BORROW A BOOK
-        </div>
-      </a>
-      <a href="#">
-        <div class="option2">
-            LEND A BOOK
-        </div>
-      </a>
-    </div>
-    <br>
-    <div class="about">
-      <h2>Why borrow a book?</h2> <br>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-        <ul>
-          <li>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</li>
-          <li>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</li>
-        </ul>
-      </p>
+    <div class="wrapper"> <!-- wraps all content together -->
+      <h1 class="header">INMESH BOOKS</h1>
+      <div class="option">
+        <a href="#">
+          <div class="option1">
+            BORROW A BOOK
+          </div>
+        </a>
+        <a href="#">
+          <div class="option2">
+              LEND A BOOK
+          </div>
+        </a>
+      </div>
       <br>
-      <h2>Why lend a book?</h2> <br>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-        <ul>
-          <li>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</li>
-          <li>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</li>
-        </ul>
-      </p>
-      <br>
-      <h2>Our Service</h2> <br>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-      </p>
-      <br>
-      <h2>Our Story</h2> <br>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-      </p>
-    </div>
-    <br>
-    <div class="footer">
-      <p class="footer-text">
-        Contact us: 07777777777, 123 Fake Street, A1 1AA <br>
-        Email: info@inmesh.org<br>
+      <div class="about">
+        <h2>Why borrow a book?</h2> <br>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+          Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+          <ul>
+            <li>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</li>
+            <li>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</li>
+          </ul>
+        </p>
         <br>
-        Copyright © Inmesh
-      </p>
+        <h2>Why lend a book?</h2> <br>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+          Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+          <ul>
+            <li>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</li>
+            <li>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</li>
+          </ul>
+        </p>
+        <br>
+        <h2>Our Service</h2> <br>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+          Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+          Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+          Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        </p>
+        <br>
+        <h2>Our Story</h2> <br>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+          Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+          Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+          Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        </p>
+      </div>
+      <br>
+      <div class="footer">
+        <p class="footer-text">
+          Contact us: 07777777777, 123 Fake Street, A1 1AA <br>
+          Email: info@inmesh.org<br>
+          <br>
+          Copyright © Inmesh
+        </p>
+      </div>
     </div>
   </body>
 </html>
