--- a/Udacity 1st Project/Frontpage.html
+++ b/Udacity 1st Project/Frontpage.html
@@ -6,51 +6,48 @@
     <link rel="stylesheet" href="project.css">
   </head>
   <body>
-    <div class="wrapper"> <!-- wraps all content together -->
+    <div class="wrapper">
       <h1 class="header">INMESH BOOKS</h1>
-      <div class="option">
+      <div class="pictures">
         <a href="#">
-          <div class="option1">
+          <div class="option" id="selection1">
             BORROW A BOOK
           </div>
         </a>
         <a href="#">
-          <div class="option2">
+          <div class="option" id="selection2">
               LEND A BOOK
           </div>
         </a>
       </div>
-      <br>
       <div class="about">
-        <h2>Why borrow a book?</h2> <br>
+        <h2>Why borrow a book?</h2>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
           Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+        </p>
           <ul>
             <li>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</li>
             <li>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</li>
           </ul>
-        </p>
-        <br>
-        <h2>Why lend a book?</h2> <br>
+        <h2>Why lend a book?</h2>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
           Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+        </p>
           <ul>
             <li>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</li>
             <li>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</li>
           </ul>
-        </p>
-        <br>
-        <h2>Our Service</h2> <br>
+        <h2>Our Service</h2>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
           Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
           Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
           Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
         </p>
-        <br>
-        <h2>Our Story</h2> <br>
+        <img src="pexels-photo-398532.jpeg" alt="People coming together to make an amazing new solution for books, with some museli and some drinking water. They are bumping fists." class="collaborating_image">
+        <h2>Our Story</h2>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
           Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
